@@ -1,6 +1,9 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Renault Twizy: support added for standard metric "v.e.aux12v" (base system awake),
+    OBD polling (DTC checks) enabled already with base system awake
+    (= DTC available in STOP conditions)
 - VW e-Up: enable framework climate preconditioning scheduler web UI
     (Note: climate control only available with T26 connection)
 - Vehicle framework: Scheduled precondition control with duration support
